--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,4 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 @import
-	"base",
-  "layout",
-  "syntax-highlighting",
-	"style"
+  "layout"
